Added MA 81 translation.

--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_080.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_080.md
@@ -4,6 +4,7 @@ title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 80. The Rough Cloth
 type: kramdown
 base: ../../../
 previous: MA_079.html
+next: MA_081.html
 ---
 
 # [The Medium Discourses](../../index.html)
