Various corrections and changes.

--- a/01_dirgha/DA_29.md
+++ b/01_dirgha/DA_29.md
@@ -8,7 +8,7 @@ previous: ../index.html
 # [The Long Discourses](index.html){:#nref1}
 ### 29. Lohitya
 
-Thus I have heard:[\[1\]](#n1) One time, the Buddha was in Kauśala touring among the people. With an assembly of 1,250 great monks, he went to the brahmin town of *Śālavatī and stopped to rest to the north in a rosewood grove.[\[2\]](#n2)
+Thus I have heard:[\[1\]](#n1) One time, the Buddha was in Kauśala touring among the people. With an assembly of 1,250 great monks, he went to the brahmin town of [Śālavatī] and stopped to rest to the north in a rosewood grove.[\[2\]](#n2)
 
 There was a brahmin then named Lohitya[\[3\]](#n3) who was staying in a sal grove. His town was bountiful and happy, and the people were flourishing. King Prasenajit had awarded this town to that brahmin as his brahmin due.[\[4\]](#n4) This brahmin was descended from seven generations of fathers and mothers who were genuine, so he wasn’t slandered by others. He chanted and fully understood the other canon of three divisions,[\[5\]](#n5) and he could entirely discern the various kinds of scriptures. He was also skilled in the principle of the great man’s signs, divining fortune and misfortune, and sacrifices and rituals.
 
@@ -135,7 +135,7 @@ After the Buddha had taught the Dharma, the brahmin Lohitya heard what the Buddh
 
 ### Endnotes {#n2}
 
-1. {:#n3} This sutra is a close parallel with Pali DN 12. Aside from differences in details, there are two major departures from the Pali sutta.\\
+1. {:#n3} This sutra is a close parallel with Pali [DN 12](https://suttacentral.net/dn12){: target="_blank"}. Aside from differences in details, there are two major departures from the Pali sutta.\\
       First, Lohitya visits the Buddha personally to invite him and the monks for a meal. The Buddha gives him a Dharma teaching, which Lohitya apparently finds insulting because he forms a wrong view that religious teachers should keep their teachings to themselves. In the Pali, this encounter doesn’t happen. Instead, Lohicca’s wrong view is simply stated at the outset.\\
       The second major difference is that the Q&A between the Buddha and Lohitya takes place at the end of the DA sutra and culminates in Lohitya’s conversion to the Buddha’s teaching. In the Pali, the Q&A section comes before the discourse on the three blameworthy teachers. [\[back\]](#nref1)
 2. {:#n4} *\*Śālavatī*. This is an educated guess based on the Chinese transliteration. Pali: Sālavatikā.\\
