--- a/02_madhyama/01_First/01_Sevens/MA_003.md
+++ b/02_madhyama/01_First/01_Sevens/MA_003.md
@@ -59,7 +59,7 @@ next: MA_004.html
 15\. “Thus, suppose a noble disciple also attains seven good qualities and acquires four progressive mental states that are easy and not difficult to attain. Because of this, King Māra doesn’t get an advantage over him, and the noble disciple doesn’t follow bad and unwholesome things. Not being stained by defilements, he’ll no longer be subject to birth.
 {: #p15}
 
-16\. “What are the seven good qualities attained by the noble disciple? It means the noble disciple attains a resolute faith that’s deeply attached to the Tathāgata. Once he has established the faculty of faith, he will never follow outside mendicants and priests,[\[3\]](#n3){: #ref3} nor gods, Māra, Brahmā, or any other worldly being. This is called the first good quality attained by the noble disciple.
+16\. “What are the seven good qualities attained by the noble disciple? It means the noble disciple attains a resolute faith that’s deeply attached to the Tathāgata. Once he has established the faculty of faith, he will never follow outside ascetics and priests,[\[3\]](#n3){: #ref3} nor gods, Māra, Brahmā, or any other worldly being. This is called the first good quality attained by the noble disciple.
 {: #p16}
 
 17\. “Furthermore, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the second good quality attained by the noble disciple.
@@ -97,7 +97,7 @@ next: MA_004.html
 
 #### The Noble Disciple Is Like the King’s Border City
 
-28\. “Suppose the king’s border city erects a tower, building on ground that makes it sturdy and indestructible. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple attains a resolute faith that’s deeply attached to the Tathāgata. Once he has established the faculty of faith, he will never follow outside mendicants and priests, nor gods, Māra, Brahmā, or any other worldly being. This is called the noble disciple attaining the tower of faith, which removes what’s bad and unwholesome and cultivates good qualities.
+28\. “Suppose the king’s border city erects a tower, building on ground that makes it sturdy and indestructible. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple attains a resolute faith that’s deeply attached to the Tathāgata. Once he has established the faculty of faith, he will never follow outside ascetics and priests, nor gods, Māra, Brahmā, or any other worldly being. This is called the noble disciple attaining the tower of faith, which removes what’s bad and unwholesome and cultivates good qualities.
 {: #p28}
 
 29\. “Suppose the king’s city digs a moat, making it quite deep and wide, and it’s maintained dependably. Those inside are made secure, and external enemies are kept at bay. Thus, the noble disciple always conducts himself conscientiously. Being conscientious, he knows the shame of bad and unwholesome qualities, defilements, and afflictions, which bring bad consequences and create the basis of birth-and-death. This is called the noble disciple attaining the moat of conscience, which removes what’s bad and unwholesome and cultivates good qualities.
@@ -135,9 +135,9 @@ next: MA_004.html
 
 ### Notes
 
-1. {:#n1} Parallels include AN 7.67 and EA 39.4. [\[Back\]](#ref1)
+1. {:#n1} Parallels include [AN 7.67](https://suttacentral.net/an7.67){: target="_blank"} and [EA 39.4](https://suttacentral.net/ea39.4){: target="_blank"}. [\[Back\]](#ref1)
 2. {:#n2} *calabash beans, green grams, and lentils*. These are educated guesses based on glosses found in classical dictionaries and patterns of translation in other texts. Essentially, though, it appears to be a list of two or three common Indian legumes. [\[Back\]](#ref2)
-3. {:#n3} *outside mendicants and priests*. “Outside” means those who belonged to others sects and philosophies that did follow the Buddha’s teaching. [\[Back\]](#ref3)
+3. {:#n3} *outside ascetics and priests*. “Outside” means those who belonged to others sects and philosophies that did follow the Buddha’s teaching. [\[Back\]](#ref3)
 
 ---
 
