--- a/02_madhyama/01_First/01_Sevens/MA_004.md
+++ b/02_madhyama/01_First/01_Sevens/MA_004.md
@@ -67,7 +67,7 @@ The monks then accepted the teaching and listened.
 15\. “How does a person stand up after emerging and look around after standing? It means a person emerges and then attains faith in the good Dharma. Observing precepts, generous, well-versed, and wise, they cultivate the good Dharma. At some point later, their faith remains resolute; it isn’t lost. Their observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
 {: #p15}
 
-16\. “Abiding in the good Dharma, they know suffering as it truly is. They know suffering’s cultivation, knows suffering’s cessation, and know the path to the cessation of suffering as they truly are. Thus knowing and thus seeing, they readily end the three bonds, which are belief in the individual, adherence to precepts, and doubt. Once these three bonds have ended, they become a stream entrant and don’t fall into bad states. They’re certainly destined for right awakening [424c] and will experience at most seven existences. After seven rebirths up in the heavens or here among humans, they will readily attain the limit of suffering.
+16\. “Abiding in the good Dharma, they know suffering as it truly is. They know suffering’s cultivation, knows suffering’s cessation, and know the path to the cessation of suffering as they truly are. Thus knowing and thus seeing, they readily end the three bonds, which are belief in the individual, adherence to precepts, and doubt. Once these three bonds have ended, they become a stream entrant and don’t fall into bad states. They’re certainly destined for right awakening [424c] and will experience at most seven existences. After seven rebirths up in the heavens or here among humans, they will readily reach the limit of suffering.
 {: #p16}
 
 17\. “This is called the person who stands up after emerging and looks around after standing. They’re like a person submerged in water who stands up after emerging and looks around after standing up. I say that person is likewise. This is called the person of the fourth water metaphor. The world in truth does have such people.
@@ -78,7 +78,7 @@ The monks then accepted the teaching and listened.
 18\. “How does a person stand up after emerging, look around after standing, and wade across after looking around? It means a person emerges and attains faith in the good Dharma. Observing precepts, generous, well-versed, and wise, they cultivate the good Dharma. At some point later, their faith remains resolute; it isn’t lost. Their observance of precepts, generosity, learning, and wisdom are resolute; they aren’t lost.
 {: #p18}
 
-19\. “Abiding in the good Dharma, they know suffering as it truly is. They know suffering’s cultivation, know suffering’s cessation, and know the path to the cessation of suffering as they truly are. Thus knowing and thus seeing, they readily end the three bonds, which are belief in the individual, adherence to precepts, and doubt. Once these three bonds are ended, lust, hate, and delusion are weakened. They attain one rebirth up in the heavens or here among humans. After one rebirth, they’ll readily attain the limit of suffering.
+19\. “Abiding in the good Dharma, they know suffering as it truly is. They know suffering’s cultivation, know suffering’s cessation, and know the path to the cessation of suffering as they truly are. Thus knowing and thus seeing, they readily end the three bonds, which are belief in the individual, adherence to precepts, and doubt. Once these three bonds are ended, lust, hate, and delusion are weakened. They attain one rebirth up in the heavens or here among humans. After one rebirth, they’ll readily reach the limit of suffering.
 {: #p19}
 
 20\. “This is called the person who stands up after emerging, looks around after standing, and wades across after looking around. They’re like a person submerged in water who stands up after emerging, looks around after standing, and wades across after looking around. I say this person is likewise. This is called the person of the fifth water metaphor. The world in truth does have such people.
@@ -114,7 +114,7 @@ The monks then accepted the teaching and listened.
 
 ### Notes
 
-1. {:#n1} The Pali counterpart to this sutra is [AN 7.15](https://suttacentral.net/an7.15/en/sujato){: target="_blank"}. [\[Back\]](#ref1)
+1. {:#n1} Parallels include [AN 7.15](https://suttacentral.net/an7.15){: target="_blank"}, [EA 39.3](https://suttacentral.net/ea39.3){: target="_blank"}, and [T29](https://suttacentral.net/T29){: target="_blank"}. [\[Back\]](#ref1)
 2. {:#n2} *lies prostrate*. Lit. "constantly lies." [\[Back\]](#ref2)
 
 ---
