--- a/02_madhyama/01_First/01_Sevens/MA_006.md
+++ b/02_madhyama/01_First/01_Sevens/MA_006.md
@@ -89,7 +89,7 @@ The monks then accepted the teaching and listened.
 {: #p20}
 
 ### Notes
-1. {: #n1} [AN 7.55](https://suttacentral.net/an7.55/en/sujato){: target="_blank"} is a close parallel to this sutra. [\[Back\]](#ref1)
+1. {: #n1} Parallels include [AN 7.55](https://suttacentral.net/an7.55){: target="_blank"}. [\[Back\]](#ref1)
 2. {: #n2} *stillness*. Lit. “stop making tracks” or “stand still.” [\[Back\]](#ref2)
 
 ---
