--- a/02_madhyama/01_First/05_Related_To_Cultivation/MA_046.md
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/MA_046.md
@@ -11,13 +11,13 @@ next: MA_047.html
 ## [Chapter 5: Related to Cultivation](index.html)
 ### 46. Conscience and Modesty (2)
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {: #p1}
 
 2\. It was then that Venerable Śāriputra addressed the monks, “Good men, if a monk has no conscience and no modesty, then that’s detrimental to affection and respect. If he has no affection and respect, then that’s detrimental to faith. If he doesn’t have faith, then that’s detrimental to right thinking. If he has no right thinking, then that’s detrimental to right mindfulness and right knowledge. If he has no right mindfulness and right knowledge, then that’s detrimental to guarding his faculties, guarding the precepts, having no regrets, gladness, joy, calm, happiness, concentration, seeing as it really is and knowing as it truly is, disenchantment, lack of desire, and liberation. If he has no liberation, then that’s detrimental to nirvāṇa.
 {: #p2}
 
-3\. “Good men, just like a tree with outer bark that’s damaged, the inner bark then isn’t formed. The inner bark not being formed, then the branches, trunk, core, joints, limbs, leaves, flowers, and fruit won’t form.
+3\. “Good men, just like [486b] a tree with outer bark that’s damaged, the inner bark then isn’t formed. The inner bark not being formed, then the branches, trunk, core, joints, limbs, leaves, flowers, and fruit won’t form.
 {: #p3}
 
 4\. “Good men, you should know that a monk is likewise. If he has no conscience and no modesty, that’s detrimental to affection and respect. if he has no affection and respect, that’s detrimental to faith. If he doesn’t have faith, that’s detrimental to right thinking. If he has no right thinking, that’s detrimental to right mindfulness and right knowledge. If he has no right mindfulness and right knowledge, that’s detrimental to guarding his faculties, guarding the precepts, not having regrets, gladness, joy, calm, happiness, concentration, seeing as it really is and knowing as it truly is, disenchantment, lack of desire, and liberation. If he has no liberation, that’s detrimental to nirvāṇa.
@@ -34,6 +34,9 @@ next: MA_047.html
 
 8\. Venerable Śāriputra taught thus. Those monks who heard what the Venerable Śāriputra taught rejoiced and handed it down.
 {: #p8}
+
+### Notes
+1. {: #n1} Parallels include [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
