--- a/02_madhyama/01_First/05_Related_To_Cultivation/MA_047.md
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/MA_047.md
@@ -20,7 +20,7 @@ next: MA_048.html
 3\. “If a monk observes the precepts, he readily cultivates not having regrets, gladness, joy, calm, happiness, concentration, seeing as it really is and knowing as it truly is, disenchantment, lack of desire, and liberation. If he has liberation, he readily cultivates nirvāṇa.”
 {: #p3}
 
-4\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
+4\. The Buddha spoke thus. [486c] Those monks who heard what the Buddha taught rejoiced and handed it down.
 {: #p4}
 
 ---
