--- a/02_madhyama/01_First/05_Related_To_Cultivation/MA_049.md
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/MA_049.md
@@ -11,17 +11,20 @@ next: MA_050.html
 ## [Chapter 5: Related to Cultivation](index.html)
 ### 49. Veneration
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “A monk should practice respect, well observe, and pay homage to those of the religious life. Suppose a monk hasn’t practiced respect, well observed, or paid homage to those of the religious life. There’s no way he’ll be endowed with deportment. Not being endowed with deportment, there’s no way he’ll be endowed with learning. Not being endowed with learning, there’s no way he’ll be endowed with the body of precepts. Not being endowed with the body of precepts, there’s no way he’ll be endowed with the body of concentration. Not being endowed with the body of concentration, there’s no way he’ll be endowed with the body of wisdom. Not being endowed with the body of wisdom, there’s no way he’ll be endowed with the body of liberation. Not being endowed with the body of liberation, there’s no way he’ll be endowed with knowing and seeing the body of the liberation. Not being endowed with knowing and seeing the body of liberation, there’s no way he’ll be endowed with nirvāṇa.
+2\. It was then that the Bhagavān addressed the monks, “A monk should practice respect, well observe, and pay homage to those of the religious life. Suppose a monk hasn’t practiced respect, well observed, or paid homage to those of the religious life. There’s no way he’ll be endowed with deportment. Not being endowed with deportment, there’s no way he’ll be endowed with learning. Not being endowed with learning, there’s no way he’ll be endowed with the body of precepts. Not being endowed with the body of precepts, there’s no way he’ll be endowed with the body of concentration. [487a] Not being endowed with the body of concentration, there’s no way he’ll be endowed with the body of wisdom. Not being endowed with the body of wisdom, there’s no way he’ll be endowed with the body of liberation. Not being endowed with the body of liberation, there’s no way he’ll be endowed with knowing and seeing the body of liberation. Not being endowed with knowing and seeing the body of liberation, there’s no way he’ll be endowed with nirvāṇa.
 {: #p2}
 
-3\. “Suppose a monk practices respect, well observed, or paid homage to those of the religious life. It’s possible he’ll be endowed with deportment. Being endowed with deportment, it’s possible he’ll be endowed with learning. Being endowed with learning, it’s possible he’ll be endowed with the body of precepts. Being endowed with the body of precepts, it’s possible he’ll be endowed with the body of concentration. Being endowed with the body of concentration, it’s possible he’ll be endowed with the body of wisdom. Being endowed with the body of wisdom, it’s possible he’ll be endowed with the body of liberation. Being endowed with the body of liberation, it’s possible he’ll be endowed with knowing and seeing the body of the liberation. Being endowed with knowing and seeing the body of liberation, it’s possible he’ll be endowed with nirvāṇa.”
+3\. “Suppose a monk practices respect, well observed, or paid homage to those of the religious life. It’s possible he’ll be endowed with deportment. Being endowed with deportment, it’s possible he’ll be endowed with learning. Being endowed with learning, it’s possible he’ll be endowed with the body of precepts. Being endowed with the body of precepts, it’s possible he’ll be endowed with the body of concentration. Being endowed with the body of concentration, it’s possible he’ll be endowed with the body of wisdom. Being endowed with the body of wisdom, it’s possible he’ll be endowed with the body of liberation. Being endowed with the body of liberation, it’s possible he’ll be endowed with knowing and seeing the body of liberation. Being endowed with knowing and seeing the body of liberation, it’s possible he’ll be endowed with nirvāṇa.”
 {: #p3}
 
 4\. The Buddha spoke thus. Those monks who had heard what the Buddha taught rejoiced and handed it down.
 {: #p4}
+
+### Notes
+1. {: #n1} Parallels include [AN 5.22](https://suttacentral.net/an5.22){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
