--- a/02_madhyama/01_First/05_Related_To_Cultivation/MA_051.md
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/MA_051.md
@@ -4,13 +4,14 @@ title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 50. The Orig
 type: kramdown
 base: ../../../
 previous: MA_050.html
+next: ../../02_Lesser_Lands_and_Cities/07_King_Dirghayu/index.html
 ---
 
 # [The Medium Discourses](../../index.html)
 ## [Chapter 5: Related to Cultivation](index.html)
 ### 51. The Origin
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {: #p1}
 
 2\. It was then that the Bhagavān addressed the monks, “The origin of the craving for existence isn’t knowable. In the past, there was no craving for existence, but now the craving for existence has arisen, and it’s readily knowable what the cause of the craving for existence is.
@@ -62,13 +63,14 @@ They answered, “Hearing bad teachings is its cultivation.”
 They answered, “Associating with bad friends is its cultivation.”
 
 12\. “Associating with bad friends has its cultivation; it’s not without cultivation. What’s called the cultivation of associating with bad friends?
+
 They answered, “Bad people are its cultivation.”
 {: #p12}
 
 13\. “Having been endowed with bad people, one is readily endowed with association with bad friends. Having been endowed with association with bad friends, one is readily endowed with hearing bad teachings. Having heard bad teachings, one is readily endowed with disbelief. Having been endowed with the arising of disbelief, one is readily endowed with incorrect thinking. Having been endowed with incorrect thinking, one is readily endowed with incorrect mindfulness and incorrect knowledge. Having been endowed with incorrect mindfulness and incorrect knowledge, one is readily endowed with unguarded faculties. Having been endowed with unguarded faculties, one is readily endowed with the three bad conducts. Having been endowed with the three bad conducts, one is readily endowed with the five hindrances. Having been endowed with the five hindrances, one is readily endowed with ignorance. Having been endowed with ignorance, one is readily endowed with the craving for existence. Thus, this craving for existence develops and becomes fully formed.
 {: #p13}
 
-14\. “Insight and liberation also have their cultivation; they’re not without cultivation. What’s called the cultivation of insight and liberation?”
+14\. “Insight and liberation [487c] also have their cultivation; they’re not without cultivation. What’s called the cultivation of insight and liberation?”
 {: #p14}
 
 They answered, “The seven factors of awakening are their cultivation.”
@@ -122,6 +124,9 @@ They answered, “Good people are its cultivation.”
 
 25\. The Buddha spoke thus. Those monks who had heard what the Buddha taught rejoiced and handed it down.
 {: #p25}
+
+### Notes
+1. {: #n1} Parallels include [AN 10.62](https://suttacentral.net/an10.62){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
