--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_072.md
@@ -10,7 +10,7 @@ next: MA_073.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 72. The Legend of King Dīrghāyu
 
-1\. Thus have I heard: One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila Park.
+1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kauśāmbī and stayed at Ghoṣila Park.
 {: #p1}
 
 2\. At the time, the Kauśāmbī monks were having numerous quarrels with each other. The Bhagavān told the Kauśāmbī monks, “Monks, don’t quarrel with each other. Why is that?
@@ -246,7 +246,7 @@ next: MA_073.html
   Impossible to control and unify?  
   If you don’t consider the true meaning,  
   How can the bonds of hate be ended?
-* {:.verse #v5} [536c] Many voices insulting, mocking, and abusing,  
+* {:.verse #v5} [535c] Many voices insulting, mocking, and abusing,  
   Can be controlled and unified;  
   If you consider the true meaning,  
   Surely the bonds of hate will be ended.
@@ -331,7 +331,7 @@ Venerable Bhagu said, “Bhagavān, I don’t sleep day and night, diligently pr
 81\. Those venerables would [remain in their dwellings] until late afternoon. If the first one to emerge from his quiet sitting saw the water jug or the wash basin was empty, then he picked it up. If another was more able, then he would point it out when they came along and set it safely to one side. If another wasn’t more able, then one monk picked them up, or two people lifted them together, and put them to one side. They didn’t say anything to each other nor asking questions [while doing that]. Those venerables would have a meeting every five days. Sometimes they would discuss the Dharma, and other times they would be nobly silent.
 {: #p81}
 
-82\. Thereupon, the warden of the grove saw the Bhagavān approaching from afar, and he told him to stop. “Mendicant! Mendicant! Don’t enter this grove! Why is that? In this grove are three clansmen, Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila. If they see you, they may forbid [you to be here].”
+82\. Thereupon, the warden of the grove saw the Bhagavān approaching from afar, and he told him to stop. “Ascetic! Ascetic! Don’t enter this grove! Why is that? In this grove are three clansmen, Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila. If they see you, they may forbid [you to be here].”
 {: #p82}
 
 83\. The Bhagavān told him, “You, warden of the grove! If they see me, they surely will allow [me to be here]. None of them will forbid it.”
@@ -424,7 +424,7 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 
 ##### 4. Drowsiness
 
-109\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light and vision of forms, and that vision of forms and light soon disappears.’
+109\. “Aniruddha, I again had the thought, ‘What disturbance in my mind causes me to lose concentration and dispels vision? After my vision is dispelled, so is my original apprehension of light [537b] and vision of forms, and that vision of forms and light soon disappears.’
 {: #p109}
 
 110\. “Aniruddha, I also thought, ‘The disturbance of drowsiness arose in my mind. As a result of this disturbance of drowsiness, I immediately lost concentration, and my vision was dispelled. After my vision was dispelled, so was my original apprehension of light and vision of forms, and that vision of forms and light soon disappeared.’
@@ -607,6 +607,9 @@ Venerable Kimbila [536c] said, “Bhagavān, I am doing well. There isn’t anyt
 
 161\. The Buddha spoke thus. When Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila heard what the Buddha taught, they rejoiced and handed it down.
 {: #p161}
+
+### Notes
+1. {: #n1} Parallels include [MN 128](https://suttacentral.net/mn128){: target="_blank"}, [Theravāda Vinaya, Khandhaka 10](https://suttacentral.net/pli-tv-kd10){: target="_blank"}, and [EA 24.8](https://suttacentral.net/ea24.8){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
