--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_077.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_077.md
@@ -11,7 +11,7 @@ next: MA_078.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 77. The Three Clansmen of Sāketa
 
-1\. Thus I have heard: One time, the Buddha traveled to Sāketa and stayed in the Green Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Sāketa and stayed in the Green Grove.
 {: #p1}
 
 2\. At the time, three clansmen were in Sāketa: Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila. They were all youths who had recently left home to train and who had together entered this right Dharma not long ago.
@@ -199,6 +199,8 @@ Aniruddha and the other accepted the teaching and listened.
 41\. The Buddha spoke thus. Venerable Aniruddha and the monks who heard what the Buddha taught rejoiced and handed it down.
 {: #p41}
 
+### Notes
+1. {: #n1} Parallels include [MN 68](https://suttacentral.net/mn68){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
