--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_080.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_080.md
@@ -56,7 +56,7 @@ Venerable Ānanda then saluted the Buddha with his palms together and said, “M
 Venerable Aniruddha said, “Very well, Bhagavān!”
 {: #p11}
 
-12\. The Bhagavān then folded his upper garment four times and spread it out as a bed, and he made a pillow out of his outer robe. He laid down on his right side with his feet together and formed the perception of light. Establishing right mindfulness and right knowledge, he continued producing that perception.
+12\. The Bhagavān then folded his upper garment four times and spread it out as a bed, and he made a pillow out of his outer robe. He laid down on his right side with his feet together and formed the perception of light. Establishing right mindfulness and right knowledge, he continuously produced the idea of rising.
 {: #p12}
 
 13\. Venerable Aniruddha then addressed the monks, “Good men, before I had left home to train on the path, I had grown tired of birth, old age, illness, and death, lamentation and heartache, and sorrow and grief. I wanted to put an end to this great mass of suffering.
