--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_081.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_081.md
@@ -10,7 +10,7 @@ previous: MA_080.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 81. Mindfulness of Body
 
-1\. Thus have I heard: One time, the Buddha traveled to the country of Aṅga with a group of great monks. They went to Āpaṇa and stayed at Kaineya’s residence.
+1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Aṅga with a group of great monks. They went to Āpaṇa and stayed at Kaineya’s residence.
 {: #p1}
 
 #### Introduction
@@ -89,7 +89,7 @@ The monks then accepted the teaching and listened.
 23\. “Thus, a monk follows his physical actions, knowing the above as it truly is. If he thus goes into seclusion and lives alone, his thoughts aren’t careless. He cultivates diligence, stops mental disturbances, and attains a concentrated state of mind. After attaining a concentrated state of mind, he then knows the above as it truly is. This is called a monk who cultivates mindfulness of body.
 {: #p23}
 
-24\. “Furthermore, a monk cultivates mindfulness of body. What’s in that monk’s body is thoroughly filled with the accomplishment of the mental freedom of a pure mind. There’s nowhere in his body that that pure mind doesn’t reach. He’s like a person wearing a seven- or eight-cubit robe. From head to toe, there’s no part of his body that isn’t covered. Thus, what’s in that monk’s body is thoroughly filled with the accomplishment of the mental freedom of a pure mind. There’s nowhere in his body that that pure mind doesn’t reach.
+24\. “Furthermore, a monk cultivates mindfulness of body. What’s in that monk’s body is filled with the accomplishment of the mental freedom of a pure mind. There’s nowhere in his body that that pure mind doesn’t reach. He’s like a person wearing a seven- or eight-cubit robe. From head to toe, there’s no part of his body that isn’t covered. Thus, what’s in that monk’s body is filled with the accomplishment of the mental freedom of a pure mind. There’s nowhere in his body that that pure mind doesn’t reach.
 {: #p24}
 
 25\. “Thus, a monk follows his physical actions, knowing the above as it truly is. If he thus goes into seclusion and lives alone, his thoughts aren’t careless. He cultivates diligence, stops mental disturbances, and attains a concentrated state of mind. After attaining a concentrated state of mind, he then knows the above as it truly is. This is called a monk who cultivates mindfulness of body.
@@ -235,6 +235,9 @@ The monks answered, “No, Bhagavān. Why is that? By rubbing a wet stick into w
 
 67\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
 {: #p67}
+
+### Notes
+1. {: #n1} Parallels include [MN 119](https://suttacentral.net/mn119){: target="_blank"}. [\[Back\]](#ref3)
 
 ---
 
