--- a/02_madhyama/01_First/01_Sevens/MA_001.md
+++ b/02_madhyama/01_First/01_Sevens/MA_001.md
@@ -64,11 +64,11 @@ next: MA_002.html
 
 #### Knowing the Assembly
 
-8\. “How does a monk know the assembly? It means a monk knows ‘This is an warrior assembly, this is a priest assembly, this is a householder assembly, and this is a mendicant assembly.[\[5\]](#n5){:#ref5} In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
+8\. “How does a monk know the assembly? It means a monk knows ‘This is an warrior assembly, this is a priest assembly, this is a householder assembly, and this is an ascetic assembly.[\[5\]](#n5){:#ref5} In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
 {: #p8}
-“Suppose there is a monk who doesn’t know the assembly, which is to say that he doesn’t know ‘This is an warrior assembly, this is a priest assembly, this is a householder assembly, and this is a mendicant assembly. In those assemblies, I should thus [421c] depart, thus stand, thus sit, thus speak, and thus be silent.’ Such a monk doesn’t know the assembly.
+“Suppose there is a monk who doesn’t know the assembly, which is to say that he doesn’t know ‘This is an warrior assembly, this is a priest assembly, this is a householder assembly, and this is an ascetic assembly. In those assemblies, I should thus [421c] depart, thus stand, thus sit, thus speak, and thus be silent.’ Such a monk doesn’t know the assembly.
 
-“Suppose there is a monk who well knows the assembly, which is to say that he well knows ‘This is an warrior assembly, this is a priest assembly, this is a householder assembly, and this is a mendicant assembly. In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who well knows the assembly.
+“Suppose there is a monk who well knows the assembly, which is to say that he well knows ‘This is an warrior assembly, this is a priest assembly, this is a householder assembly, and this is an ascetic assembly. In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who well knows the assembly.
 
 #### Knowing the Superiority of People
 
@@ -109,11 +109,11 @@ next: MA_002.html
 
 ### Notes
 
-1. {:#n1} Parallels include AN 7.68, EA 39.1, T27, and T1536.437b18-c10. [\[back\]](#ref1)
+1. {:#n1} Parallels include [AN 7.68](https://suttacentral.net/an7.68){: target="_blank"}, [EA 39.1](https://suttacentral.net/ea39.1){: target="_blank"}, [T27](https://suttacentral.net/t27){: target="_blank"}, and T1536.437b18-c10. [\[back\]](#ref1)
 2. {:#n2} This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā). Using the traditional Sanskrit interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#ref2)
 3. {:#n3} This passage is cryptic. A parallel passage in Xuanzang’s translation of the **Saṃgītiparyāya Abhidharma** (T1536.437b24-26) reads “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” Thus, these items seem to characterize a monk’s activities. [\[back\]](#ref3)
 4. {:#n4} *Relieving himself*. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
-5. {:#n5} *Warrior … priest … householder … mendicant*. The Skt. equivalents are kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. [\[back\]](#ref5)
+5. {:#n5} *Warrior … priest … householder … ascetic*. The Skt. equivalents are kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. [\[back\]](#ref5)
 
 ---
 
