--- a/02_madhyama/01_First/01_Sevens/MA_005.md
+++ b/02_madhyama/01_First/01_Sevens/MA_005.md
@@ -29,10 +29,10 @@ The monks then answered, “We see it, Bhagavān!”
 5\. The monks then said, “Bhagavān, that large wood pile is engulfed in flames. If we embraced, sat, or lie with it, that would be very painful. Bhagavān, suppose it were a warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry. To embrace, sit, or lie with her would be very pleasant, Bhagavān.”
 {: #p5}
 
-[425b] 6\. The Bhagavān told them, “I will explain this for you, so you trainee mendicants will not lose the mendicant path. Those of you who want to achieve the unsurpassed religious practice should rather embrace that wood pile engulfed in flames. If you sit or lie down there, even though it will cause you to suffer pain or die, you won’t be destined to go to an bad place or be born in hell after your body breaks up and your life ends.
+[425b] 6\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather embrace that wood pile engulfed in flames. If you sit or lie down there, even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p6}
 
-7\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not a mendicant, but he’s called a mendicant.
+7\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p7}
 
 8\. “Suppose he were to embrace an warrior woman or a priest, householder, or worker woman in the prime of life who is clean and perfumed, wearing bright and pure clothing, and whose body is adorned with flowers and jewelry, or suppose he were to sit or lie down with her. That foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
@@ -49,10 +49,10 @@ The monks then answered, “We see it, Bhagavān!”
 11\. The monks then said, “Bhagavān, if a strong man tightly wrapped a cord of hair rope around our calves and twisted it until it cut our skin, cut our flesh after cutting skin, cut our tendons after cutting flesh, cut our bones after cutting tendons, cut our marrow after cutting bones, and stopped, that would be very painful. Bhagavān, suppose we were to accept a faithful gift from a warrior, priest, householder, or worker who massages our body, limbs, hands, and feet. That would be very pleasant, Bhagavān.”
 {: #p11}
 
-12\. The Bhagavān told them, “I will explain this for you, so you trainee mendicants will not lose the mendicant path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to tightly wrap a cord of hair rope around your calf and twist it until it cuts your skin, cuts your flesh after cutting skin, cuts your tendons after cutting flesh, cuts your bone after cutting tendons, cuts your marrow after cutting bone, and stops. Even though it will cause you to suffer pain or die, you won’t be destined to go to an bad place or [425c] be born in hell after your body breaks up and your life ends.
+12\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to tightly wrap a cord of hair rope around your calf and twist it until it cuts your skin, cuts your flesh after cutting skin, cuts your tendons after cutting flesh, cuts your bone after cutting tendons, cuts your marrow after cutting bone, and stops. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or [425c] be born in hell after your body breaks up and your life ends.
 {: #p12}
 
-13\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not a mendicant, but he’s called a mendicant.
+13\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p13}
 
 14\. “Accepting a faithful gift from an warrior, priest, householder, or worker who massages his body, limbs, hands, and feet, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
@@ -69,10 +69,10 @@ The monks then answered, “We see it, Bhagavān!”
 17\. The monks then said, “Bhagavān, if a strong man used a brightly polished and sharpened sword to chop off our [leg at the] hip, that would be very painful. Bhagavān, suppose we were to accept a faithful gift from a warrior, priest, householder, or worker who venerates, respects, and looks after us. That would be very pleasant, Bhagavān.”
 {: #p17}
 
-18\. The Bhagavān told them, “I will explain this for you, so you trainee mendicants will not lose the mendicant path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to use a brightly polished and sharpened sword to chop off your [leg at the] hip. Even though it will cause you to suffer pain or die, you won’t be destined to go to an bad place or be born in hell after your body breaks up and your life ends.
+18\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to use a brightly polished and sharpened sword to chop off your [leg at the] hip. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p18}
 
-19\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not a mendicant, but he’s called a mendicant.
+19\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p19}
 
 20\. “Accepting a faithful gift from a warrior, priest, householder, or worker who venerates, respects, and looks after him, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
@@ -89,10 +89,10 @@ The monks then answered, “We see it, Bhagavān!”
 23\. The monks then said, “Bhagavān, if a strong man wrapped an iron or copper sheet that’s both glowing and flaming around our bodies, that would be very painful. Bhagavān, suppose we were to accept a faithful gift of clothing from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
 {: #p23}
 
-24\. The Bhagavān told them, “I will explain this for you, so you trainee mendicants will not lose the mendicant path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to wrap an iron or copper sheet that’s both glowing and flaming around your body. Even though it will cause you to suffer pain or die, you won’t be destined to go to an bad place or be born in hell after your body breaks up and your life ends.
+24\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to wrap an iron or copper sheet that’s both glowing and flaming around your body. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p24}
 
-25\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not a mendicant, but he’s called a mendicant.
+25\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p25}
 
 26\. “Accepting a faithful gift of clothing from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
@@ -109,10 +109,10 @@ The monks then answered, “We see it, Bhagavān!”
 29\. The monks then said, “Bhagavān, if a strong man opened our mouths with hot iron forceps and then put in an iron ball that’s both glowing and flaming, that hot iron ball would burn our lips. After it burns our lips, it would burn our tongue. After it burns our tongue, it would burn our gums. After it burns our gums, it would burn our throat. After it burns our throat, it would burn our heart. After it burns our heart, it would burn our intestines and stomach. After it burns our intestines and stomach, [426b] it would fall through [to the ground]. That would be very painful. Bhagavān, suppose we were to accept a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
 {: #p29}
 
-30\. The Bhagavān told them, “I will explain this for you, so you trainee mendicants will not lose the mendicant path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to open your mouth with hot iron forceps and then put in an iron ball that’s both glowing and flaming. That hot iron ball will burn your lips. After burning your lips, it will burn your tongue. After burning your tongue, it will burn your gums. After burning your gums, it will burn your throat. After burning your throat, it will burn your heart. After burning your heart, it will burn your intestines and stomach. After burning your intestines and stomach, it will fall through [to the ground]. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
+30\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to open your mouth with hot iron forceps and then put in an iron ball that’s both glowing and flaming. That hot iron ball will burn your lips. After burning your lips, it will burn your tongue. After burning your tongue, it will burn your gums. After burning your gums, it will burn your throat. After burning your throat, it will burn your heart. After burning your heart, it will burn your intestines and stomach. After burning your intestines and stomach, it will fall through [to the ground]. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p30}
 
-31\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things.  His is not the religious practice, but he calls it the religious practice. He’s not a mendicant, but he’s called a mendicant.
+31\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things.  His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p31}
 
 32\. “Accepting a faithful gift of food with measureless flavors from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
@@ -129,10 +129,10 @@ The monks then answered, “We see it, Bhagavān!”
 35\. The monks then said, “Bhagavān, if a strong man forced a servant to sit or lie on an iron or copper bed that’s both glowing and flaming, that would be very painful. Bhagavān, suppose we were to accept a faithful gift of a bed or sofa to lie on from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
 {: #p35}
 
-36\. The Bhagavān told them, “I will explain this for you, so you trainee mendicants will not lose the mendicant path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to force a servant to sit or lie down on an iron or copper bed that’s both glowing and flaming. Even though it will cause you to suffer pain or die, you won’t be destined to go to an bad place [426c] or be born in hell after your body breaks up and your life ends.
+36\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to force a servant to sit or lie down on an iron or copper bed that’s both glowing and flaming. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place [426c] or be born in hell after your body breaks up and your life ends.
 {: #p36}
 
-37\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not a mendicant, but he’s called a mendicant.
+37\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p37}
 
 38\. “Accepting a faithful gift of a bed or sofa to lie on from a warrior, priest, householder, or worker, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
@@ -149,10 +149,10 @@ The monks then answered, “We see it, Bhagavān!”
 41\. The monks then said, “Bhagavān, if a strong man picked up a person and put them headfirst into a large iron or copper caldron that’s both glowing and flaming, that would be very painful. Bhagavān, suppose we were to accept the faithful gift of a dwelling from a warrior, priest, householder, or worker, and it’s coated with whitewash, its windows and doors are secure and private, and it has a fireplace for warmth. That would be very pleasant, Bhagavān.”
 {: #p41}
 
-42\. The Bhagavān told them, “I will explain this for you, so you trainee mendicants will not lose the mendicant path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to pick up a person and put them headfirst into a large iron or copper caldron that’s both glowing and flaming. Even though it will cause you to suffer pain or die, you won’t be destined to go to an bad place or be born in hell after your body breaks up and your life ends.
+42\. The Bhagavān told them, “I will explain this for you, so you trainee ascetics will not lose the ascetic path. Those of you who want to achieve the unsurpassed religious practice should rather allow a strong man to pick up a person and put them headfirst into a large iron or copper caldron that’s both glowing and flaming. Even though it will cause you to suffer pain or die, you won’t be destined to go to a bad place or be born in hell after your body breaks up and your life ends.
 {: #p42}
 
-43\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not a mendicant, but he’s called a mendicant.
+43\. “If a foolish man violates the precepts and doesn’t make effort, that creates bad and unwholesome things. His is not the religious practice, but he calls it the religious practice. He’s not an ascetic, but he’s called an ascetic.
 {: #p43}
 
 44\. “Accepting a faithful gift of a dwelling from a warrior, priest, householder, or worker, which is coated with whitewash, has doors and windows that are secure and private, and has a fireplace for warmth, that foolish man’s long night will be neither good nor purposeful as a result, which brings the results of bad things. He’ll be destined to go to a bad place or be born in hell when his body breaks up and his life ends.
@@ -168,7 +168,7 @@ The monks then answered, “We see it, Bhagavān!”
 {: #p47}
 
 ### Notes
-1. {:#n1} The Pali [AN 7.72](https://suttacentral.net/an7.72/en/sujato){: target="_blank"} is a close parallel to this sutra. [\[Back\]](#ref1)
+1. {:#n1} Parallels include [AN 7.72](https://suttacentral.net/an7.72){: target="_blank"} and [EA 33.10](https://suttacentral.net/ea33.10){: target="_blank"}. [\[Back\]](#ref1)
 2. {:#n2} *engulfed in flames*. The Chinese expression here lit. means “both thoroughly glowing and flaming.” The same expression is used in two different contexts: A mass of fuel that’s burning intensely and red-hot metal. I’ve translated the expression as “engulfed in flames” for the first case and “both glowing and flaming” in the second case. [\[Back\]](#ref2)
 
 ---
