--- a/02_madhyama/01_First/05_Related_To_Cultivation/MA_042.md
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/MA_042.md
@@ -11,7 +11,7 @@ next: MA_043.html
 ## [Chapter 5: Related to Cultivation](index.html)
 ### 42. What Purpose
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 
 2\. It was then that Venerable Ānanda rose from his seat of repose in the afternoon and went to Buddha. He bowed his head at the Buddha’s feet and withdrew to sit at one side. He asked, “Bhagavān, what is the purpose of observing precepts?”
 
@@ -39,7 +39,7 @@ The Bhagavān replied, “Ānanda, happiness has the purpose of causing concentr
 
 8\. Again, he asked, “Bhagavān, what is the purpose of concentration?”
 
-The Bhagavān replied, “Ānanda, concentration has the purpose of causing seeing as it really is and knowing as it truly is. Ānanda, if someone were to have concentration, he would readily attain seeing as it really is and knowing as it truly is.”
+The Bhagavān replied, “Ānanda, concentration has the purpose of causing seeing as it really is and knowing as it truly is. Ānanda, if someone were to have [485b] concentration, he would readily attain seeing as it really is and knowing as it truly is.”
 
 9\. Again, he asked, “Bhagavān, what is the purpose of seeing as it really is and knowing as it truly is?”
 
@@ -60,6 +60,9 @@ The Bhagavān replied, “Ānanda, lack of desire has the purpose of causing lib
 14\. “Ānanda, these are the mutual advantages from one thing to another and the mutual causes from one thing to another. Thus, this observance of precepts leads to what’s supreme, which is to cross from this shore over to the other shore.”
 
 15\. The Buddha spoke thus. The Venerable Ānanda and the monks who heard what the Buddha had taught rejoiced and handed it down.
+
+### Notes
+1. {: #n1} Parallels include [AN 11.1](https://suttacentral.net/an11.1){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
