--- a/02_madhyama/01_First/05_Related_To_Cultivation/MA_043.md
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/MA_043.md
@@ -11,7 +11,7 @@ next: MA_044.html
 ## [Chapter 5: Related to Cultivation](index.html)
 ### 43. Don’t Think
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {: #p1}
 
 2\. It was then that the Bhagavān said, “Ānanda, you shouldn’t think this about observing precepts, ‘It will cause me to have no regrets.’ Ānanda, it’s simply natural that someone who observes precepts readily attains having no regrets.
@@ -26,7 +26,7 @@ next: MA_044.html
 5\. “Ānanda, you shouldn’t think this about having joy, ‘It will cause me to be calm.’ Ānanda, it’s simply natural that someone who has joy will readily attain a calm body.
 {: #p5}
 
-6\. “Ānanda, you shouldn’t think this about having calm, ‘It will cause me to be happy.’ Ānanda, it’s simply natural that someone who has calm will readily attain the feeling of happiness.
+6\. “Ānanda, you shouldn’t think this about having calm, ‘It will cause me to be happy.’ Ānanda, it’s simply natural that someone who has calm [485c] will readily attain the feeling of happiness.
 {: #p6}
 
 7\. “Ānanda, you shouldn’t think this about having happiness, ‘It will cause me to be concentrated.’ Ānanda, it’s simply natural that someone who has happiness will readily attain a concentrated state of mind.
@@ -55,6 +55,9 @@ next: MA_044.html
 
 15\. The Buddha spoke thus. Venerable Ānanda and the monks who heard what the Buddha taught rejoiced and handed it down.
 {: #p15}
+
+### Notes
+1. {: #n1} Parallels include [AN 11.2](https://suttacentral.net/an11.2){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
