--- a/02_madhyama/01_First/05_Related_To_Cultivation/MA_045.md
+++ b/02_madhyama/01_First/05_Related_To_Cultivation/MA_045.md
@@ -11,7 +11,7 @@ next: MA_046.html
 ## [Chapter 5: Related to Cultivation](index.html)
 ### 45. Conscience and Modesty
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {: #p1}
 
 2\. It was then that the Bhagavān addressed the monks, “If a monk has no conscience and no modesty, then that’s detrimental to affection and respect. If he has no affection and respect, then that’s detrimental to his faith. If he doesn’t have faith, then that’s detrimental to right thinking. If he doesn’t have right thinking, then that’s detrimental to right mindfulness and right knowledge. If he doesn’t have right mindfulness and right knowledge, then that’s detrimental to guarding his faculties, guarding the precepts, not having regrets, gladness, joy, calm, happiness, concentration, seeing as it really is and knowing as it truly is, disenchantment, lack of desire, and liberation. If he doesn’t have liberation, then that’s detrimental to nirvāṇa.
@@ -22,6 +22,9 @@ next: MA_046.html
 
 4\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
 {: #p4}
+
+### Notes
+1. {: #n1} Parallels include [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
