--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_073.md
@@ -10,7 +10,7 @@ next: MA_074.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 73. The Gods
 
-1\. Thus have I heard:  One time, the Buddha traveled to Cedi and stayed at Waterside Grove.
+1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Cedi and stayed at Waterside Grove.
 {: #p1}
 
 #### 1. Purifying Knowledge and Vision
@@ -23,7 +23,7 @@ next: MA_074.html
 
 #### 2. Meeting and Conversing with Gods
 
-4\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll also meet with those gods, exchange greetings, and have some conversation and some replies. Thus, my knowledge and vision will be fully and radiantly purified.’
+4\. “Again, I thought, ‘I’d like [539c] to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll also meet with those gods, exchange greetings, and have some conversation and some replies. Thus, my knowledge and vision will be fully and radiantly purified.’
 {: #p4}
 
 5\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I also met with those gods, exchanged greetings, and had some conversation and some replies. Still, I didn’t know of those gods their clans, their names, or their births.
@@ -42,7 +42,7 @@ next: MA_074.html
 8\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll also know of those gods their food and the pains and pleasures they experience. Thus, my knowledge and vision will be fully and radiantly purified.’
 {: #p8}
 
-9\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I also knew of those gods their food and the pains and pleasures they experienced. Still, I didn’t know of those gods their life spans, their duration, or the end of their lives.
+9\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I also knew of those gods their food and the pains and pleasures they experienced. Still, I didn’t know of those gods their life spans, [540a] their duration, or the end of their lives.
 {: #p9}
 
 #### 5. The Life Spans of Gods
@@ -58,12 +58,12 @@ next: MA_074.html
 12\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll also know of those gods what actions they had done to die and be born there. Thus, my knowledge and vision will be fully and radiantly purified.’
 {: #p12}
 
-13\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I also knew of those gods what actions they had done to die and be born there. Still, I didn’t know in what heavens those gods were.
+13\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I also knew of those gods what actions they had done to die and be born there. Still, I didn’t know [540b] in what heavens those gods were.
 {: #p13}
 
 #### 7. The Heavens Where Gods Are Born
 
-14\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll know of those gods what actions they had done to die and be born there I’ll also know in what heavens those gods are. Thus, my knowledge and vision will be fully and radiantly purified.’
+14\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll know of those gods what actions they had done to die and be born there. I’ll also know in what heavens those gods are. Thus, my knowledge and vision will be fully and radiantly purified.’
 {: #p14}
 
 15\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I knew of those gods what actions they had done to die and be born there. I also knew in what heavens those gods were. Still, I didn’t know whether I had previously been born or never been born in those heavens above.
@@ -74,19 +74,22 @@ next: MA_074.html
 16\. “Again, I thought, ‘I’d like to be able to produce their light. As a result of their light, then I’ll see shapes and forms. I’ll meet with those gods, exchange greetings, and have some conversation and some replies. I’ll know of those gods their clans, their names, and their births. I’ll know of those gods their food and the pains and pleasures they experience. I’ll know of those gods their life spans, their durations, and the end of their lives. I’ll know of those gods what actions they had done to die and be born there I’ll know in what heavens those gods are. I’ll also know whether I had previously been born or never been born in those heavens above. Thus, my knowledge and vision will be fully and radiantly purified.’
 {: #p16}
 
-17\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I knew of those gods what actions they had done to die and be born there. I knew in what heavens those gods were. I also knew whether I had previously been born or never been born in those heavens above.
+17\. “In order for knowledge and vision to be fully and radiantly purified, I lived alone in seclusion. My mind was without carelessness, and I cultivated diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I apprehended light and then saw forms. I met with those gods, exchanged greetings, and had some conversation and some replies. I knew of those gods their [540c] clans, their names, and their births. I knew of those gods their food and the pains and pleasures they experienced. I knew of those gods their life spans, their duration, and the end of their lives. I knew of those gods what actions they had done to die and be born there. I knew in what heavens those gods were. I also knew whether I had previously been born or never been born in those heavens above.
 {: #p17}
 
 #### Conclusion
 
-18\. “If I didn’t rightly know and apprehend these eight practices, then I couldn’t thoroughly declare their attainment. I wouldn’t know that I had awakened to the unsurpassed and true enlightenment, nor could I have gone beyond this world’s gods, Māra, Brahmā, mendicants, and priests. I wouldn’t have been liberated by various liberations. I wasn’t yet free from delusions. I also hadn’t yet ended birth, established the religious practice, accomplished the task, and stopped being subject to existence, knowing it as it really is.
+18\. “If I didn’t rightly know and apprehend these eight practices, then I couldn’t thoroughly declare their attainment. I wouldn’t know that I had awakened to the unsurpassed and true enlightenment, nor could I have gone beyond this world’s gods, Māra, Brahmā, ascetics, and priests. I wouldn’t have been liberated by various liberations. I wasn’t yet free from delusions. I also hadn’t yet ended birth, established the religious practice, accomplished the task, and stopped being subject to existence, knowing it as it really is.
 {: #p18}
 
-19\. “If I rightly knew and attained these eight practices, then I could thoroughly declare their attainment. I knew I had awakened to the unsurpassed and true enlightenment. I had gone beyond this world’s gods, Māra, Brahmā, mendicants, and priests. I was liberated by various liberations. My mind was free of delusions. I also had ended birth, established the religious practice, accomplished the task, and was no longer subject to existence, knowing it as it really was.”
+19\. “If I rightly knew and attained these eight practices, then I could thoroughly declare their attainment. I knew I had awakened to the unsurpassed and true enlightenment. I had gone beyond this world’s gods, Māra, Brahmā, ascetics, and priests. I was liberated by various liberations. My mind was free of delusions. I also had ended birth, established the religious practice, accomplished the task, and was no longer subject to existence, knowing it as it really was.”
 {: #p19}
 
 20\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
 {: #p20}
+
+### Notes
+1. {: #n1} Parallels include [AN 8.64](https://suttacentral.net/an8.64){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
