--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_074.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_074.md
@@ -11,7 +11,7 @@ next: MA_075.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 74. Eight Thoughts
 
-1\. Thus have I heard: One time, the Buddha traveled to Bharga and stayed at Mṛgadāva Park in Bhīṣaṇikā Grove of Śuśumāragiri.
+1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Bharga and stayed at Mṛgadāva Park in Bhīṣaṇikā Grove of Śuśumāragiri.
 {: #p1}
 
 #### The Eight Thoughts of a Great Man
@@ -132,6 +132,9 @@ next: MA_075.html
 
 31\. The Buddha thus spoke. Venerable Aniruddha and the monks who heard what the Buddha taught rejoiced and handed it down.
 {: #p31}
+
+### Notes
+1. {: #n1} Parallels include [AN 8.30](https://suttacentral.net/an8.30){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
