--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_075.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_075.md
@@ -11,7 +11,7 @@ next: MA_076.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 75. The Pure Way to the Imperturbable
 
-1\. Thus have I heard:  One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasādharma].
+1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasādharma].
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Desires are impermanent, fake, and false. These falsehoods then are illusory, deceptive, and foolish. Whether it’s desires in the present life, desires in the afterlife, forms in the present life, or forms in the afterlife, they are all the domain of Māra. They are Māra’s bait. As a result of them, the mind is affected by measureless bad and wholesome things, such as longing, anger, and fighting, which become obstacles when the noble disciple trains.
@@ -96,6 +96,9 @@ The Bhagavān told him, “Ānanda, if a monk accepts nothing, he’ll surely at
 
 24\. The Buddha thus spoke. Venerable Ānanda and the monks who heard what the Buddha taught rejoiced and handed it down.
 {:#p24}
+
+### Notes
+1. {: #n1} Parallels include [MN 106](https://suttacentral.net/mn106){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
