--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_076.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_076.md
@@ -11,7 +11,7 @@ next: MA_077.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 76. [Ugracelā]
 
-1\. Thus I have heard: One time, the Buddha traveled to [Ugracelā] and stayed on the shore of Gaṅgā Lake.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to [Ugracelā] and stayed on the shore of Gaṅgā Lake.
 {: #p1}
 
 2\. It was then that a monk rose from sitting in reflection in the afternoon and went to the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit to one side, and said, “Bhagavān, please teach for me the essentials of the Dharma. After hearing the teaching from the Bhagavān, I’ll live alone in seclusion, my mind will be without carelessness, and I’ll cultivate diligence. As a result of living alone in seclusion, my mind being without carelessness, and cultivating diligence, I’ll become a clansman who shaves off his beard and hair, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path. When the unsurpassed religious practice is finished, then I’ll know and recognize for myself the accomplishment of self-realization in the present life: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ I’ll no longer be subject to existence and know it as it really is.”
@@ -77,7 +77,7 @@ next: MA_077.html
 22\. “Furthermore, you should cultivate concentration with perception and contemplation, concentration with no perception and some contemplation, and concentration without perception or contemplation. You should also cultivate concentration together with joy, concentration together with happiness, concentration together with concentration, and concentration together with equanimity.
 {: #p22}
 
-23\. “Monk, suppose you cultivate these concentrations and the utmost goodness. Monk, in your mind completely fill one direction with kindness. Thus, for two, three, and four directions, the four counterpoints, up, and down, completely fill them all in your mind with kindness. Without bonds, enmity, anger, or quarrel, cultivate the widest, greatest, and measureless goodness and completely fill the whole world. Thus, in your mind and without bonds, enmity, or quarrel, cultivate the widest, greatest, and measureless goodness and completely fill the whole world with compassion, joy, and equanimity.
+23\. “Monk, suppose you cultivate these concentrations and the utmost goodness. Monk, in your mind fill one direction with kindness. Thus, for two, three, and four directions, the four counterpoints, up, and down, fill them all in your mind with kindness. Without bonds, enmity, anger, or quarrel, cultivate the widest, greatest, and measureless goodness and fill the whole world. Thus, in your mind and without bonds, enmity, or quarrel, cultivate the widest, greatest, and measureless goodness and completely fill the whole world with compassion, joy, and equanimity.
 {: #p23}
 
 24\. “Monk, suppose you cultivate these concentrations and the utmost goodness. If you travel east, you’ll surely attain well-being and not have any distress. If you travel south, west, or north, you’ll surely attain well-being and not have any distress. Monk, if you cultivate these concentrations and the utmost goodness, then even if I did not say you abide in good qualities, how could I say they would decline? Day and night, those good qualities will only grow and not decline.
@@ -94,6 +94,9 @@ next: MA_077.html
 
 28\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and handed it down.
 {: #p28}
+
+### Notes
+1. {: #n1} Parallels include [AN 8.63](https://suttacentral.net/an8.63){: target="_blank"} and [SN 47.3](https://suttacentral.net/sn47.3){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
