--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_079.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_079.md
@@ -11,12 +11,12 @@ next: MA_080.html
 ## [Chapter 7: King Dīrghāyu](index.html)
 ### 79. The Greater Gods
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n3){: #ref3} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {: #p1}
 
 #### Ṛṣidatta’s Invitation
 
-2\. The wealthy man Ṛṣidatta[\[1\]](#n1){: #ref1} told a messenger, “Go to the Buddha and bow your head at the Bhagavān’s feet for me. Make inquiries about whether the Bhagavān’s noble body is relaxed, strong, comfortable, and without illness. Does he rise from his dwelling with ease? Is his energy as it usual is? Say this: ‘The wealthy man Ṛṣidatta bows his head at the Buddha’s feet and inquiries about whether the Bhagavān’s noble body is relaxed, strong, comfortable, and without illness. Does he rise from his dwelling with ease? Is his energy as it usual is?’
+2\. The wealthy man Ṛṣidatta[\[2\]](#n1){: #ref1} told a messenger, “Go to the Buddha and bow your head at the Bhagavān’s feet for me. Make inquiries about whether the Bhagavān’s noble body is relaxed, strong, comfortable, and without illness. Does he rise from his dwelling with ease? Is his energy as it usual is? Say this: ‘The wealthy man Ṛṣidatta bows his head at the Buddha’s feet and inquiries about whether the Bhagavān’s noble body is relaxed, strong, comfortable, and without illness. Does he rise from his dwelling with ease? Is his energy as it usual is?’
 {: #p2}
 
 3\. “Once you’ve made these inquiries of the Buddha, go to Venerable Aniruddha and bow your head at his feet for me. Make inquiries about whether the venerable’s noble body is relaxed, strong, comfortable, and without illness. Does he rise from his dwelling with ease? Is his energy as it usually is? Say this: ‘The wealthy man Ṛṣidatta bows his head at the feet of Venerable Aniruddha and inquires about whether the venerable’s noble body is relaxed, strong, comfortable, and without illness. Does he rise from his dwelling with ease? Is his energy as it usually is? Ṛṣidatta invites the Venerable Aniruddha and a total of four people to share a meal tomorrow.’
@@ -34,7 +34,7 @@ next: MA_080.html
 7\. When he heard what the Buddha said, the messenger well accepted and well retained it. He bowed his head at the Buddha’s feet, circled him three times, and departed. He went to Venerable Aniruddha, bowed his head at his feet, and withdrew to sit at one side. He said, “Venerable Aniruddha, the wealthy man Ṛṣidatta bows his head at Venerable Aniruddha’s feet. He inquires about whether the venerable’s noble body is relaxed, strong, comfortable, and without illness. Does he rise from his dwelling with ease? Is his energy as it usually is? Ṛṣidatta invites Venerable Aniruddha and a total of four people to share a meal tomorrow.”
 {: #p7}
 
-8\. Just then, Venerable True Kātyāyana[\[2\]](#n2){: #ref2} had left and was sitting in repose not far away. Venerable Aniruddha then said to him, “Good man, Kātyāyana! I’ll be taking the road tomorrow to solicit alms in Śrāvastī, as it’s right to do. Now, the wealthy man Ṛṣidatta has sent someone to invite me and four people to share a meal tomorrow.”
+8\. Just then, Venerable True Kātyāyana[\[3\]](#n2){: #ref2} had left and was sitting in repose not far away. Venerable Aniruddha then said to him, “Good man, Kātyāyana! I’ll be taking the road tomorrow to solicit alms in Śrāvastī, as it’s right to do. Now, the wealthy man Ṛṣidatta has sent someone to invite me and four people to share a meal tomorrow.”
 {: #p8}
 
 Venerable True Kātyāyana immediately said, “Let Venerable Aniruddha silently accept his invitation! We’ll leave this dark grove tomorrow and go soliciting alms in Śrāvastī.” Venerable Aniruddha then silently accepted his invitation.
@@ -57,7 +57,7 @@ Venerable Aniruddha told the messenger, “You can go back now. I’ll know when
 
 Venerable Aniruddha told him, “Wealthy man, go ahead and ask your question. After listening, I’ll consider it.”
 
-13\. Ṛṣidatta then asked Venerable Aniruddha, “Some mendicants and priests have come to me, and they’ve said, ‘Wealthy man, you should cultivate the liberation of the great mind.’ Aniruddha, other mendicants and priests have come to me, and they’ve said, ‘Wealthy man, you should cultivate the liberation of the measureless mind.’ Venerable Aniruddha, are these two liberations of the great mind and the measureless mind different in meaning and name, or are they the same in meaning but different in name?”
+13\. Ṛṣidatta then asked Venerable Aniruddha, “Some ascetics and priests have come to me, and they’ve said, ‘Wealthy man, you should cultivate the liberation of the great mind.’ Aniruddha, other ascetics and priests have come to me, and they’ve said, ‘Wealthy man, you should cultivate the liberation of the measureless mind.’ Venerable Aniruddha, are these two liberations of the great mind and the measureless mind different in meaning and name, or are they the same in meaning but different in name?”
 {: #p13}
 
 Venerable Aniruddha told him, “Wealthy man, you give your own answer to this question first, and then I’ll answer after you.”
@@ -65,13 +65,13 @@ Venerable Aniruddha told him, “Wealthy man, you give your own answer to this q
 14\. Ṛṣidatta said, “Venerable Aniruddha, these two liberations of the great mind and the measureless mind are the same in meaning but different in name, but the wealthy man Ṛṣidatta isn’t the one to answer this question.”
 {: #p14}
 
-15\. Venerable Aniruddha told him, “Wealthy man, permit me to explain the liberations of the great mind and measureless mind for you. Regarding the liberation of the great mind, suppose a mendicant or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Based on a single tree, their thinking is freed, and they accomplish the filling of it with the liberation of the great mind. Their mind is liberated to that extent and doesn’t go beyond it. If they don’t base it on one tree, they base it on two or three trees. Their thinking is freed, and they accomplish the filling of it with the liberation of the great mind. Their mind is liberated to that extent and doesn’t go beyond it.
+15\. Venerable Aniruddha told him, “Wealthy man, permit me to explain the liberations of the great mind and measureless mind for you. Regarding the liberation of the great mind, suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Based on a single tree, their thinking is freed, and they accomplish the filling of it with the liberation of the great mind. Their mind is liberated to that extent and doesn’t go beyond it. If they don’t base it on one tree, they base it on two or three trees. Their thinking is freed, and they accomplish the filling of it with the liberation of the great mind. Their mind is liberated to that extent and doesn’t go beyond it.
 {: #p15}
 
 16\. “If they don’t base it on two or three trees, they base it on one grove. If they don’t base it on one grove, they base it on two or three groves. If they don’t base it on two or three groves, they base it on one village. If they don’t base it on one village, they base it on two or three villages. If they don’t base it on two or three villages, they base it on one country. If they don’t base it on one country, they base it on two or three countries. If they don’t base it on two or three countries, they base it on the Earth up to the ocean. Their thinking is freed, and they accomplish the filling of it with the liberation of the great mind. Their mind is liberated to that extent and doesn’t go beyond it. This is called the liberation of the great mind.
 {: #p16}
 
-17\. “Wealthy man, what is the liberation of measureless mind? Suppose a mendicant or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They accomplish the filling of one direction with both their mind and kindness. They do so in two, three, and four directions, the four counterpoints, and up and down. They completely pervade them all with both their mind and kindness. It’s without fetters, without enmity, without anger, without disputation, and very broad and great. Measureless and well cultivated, they accomplish the filling of the whole world.
+17\. “Wealthy man, what is the liberation of measureless mind? Suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. They accomplish the filling of one direction with both their mind and kindness. They do so in two, three, and four directions, the four counterpoints, and up and down. They completely pervade them all with both their mind and kindness. It’s without fetters, without enmity, without anger, without disputation, and very broad and great. Measureless and well cultivated, they accomplish the filling of the whole world.
 {: #p17}
 
 18\. “So it is with both their mind and compassion, joy, and equanimity. Each is without fetters, without enmity, without anger, without disputation, and very broad and great. Measureless and well cultivated, they accomplish the filling of the whole world with them. This is called the liberation of measureless mind.
@@ -104,18 +104,18 @@ Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the rela
 25\. Venerable True Kātyāyana asked, “Venerable Aniruddha, what are the causes and conditions for knowing the relative superiority of those radiance gods that are born in the same place, whether they’re marvelous or not marvelous?”
 {: #p25}
 
-26\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose a mendicant or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Based on one tree, their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. If they don’t base it on one tree, they base it on two or three trees. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it.
+26\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Based on one tree, their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. If they don’t base it on one tree, they base it on two or three trees. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it.
 {: #p26}
 
 27\. “Good man, Kātyāyana, which of these two liberations of mind is higher, greater, marvelous, and best?”
 {: #p27}
 
-Venerable True Kātyāyana replied, “Venerable Aniruddha, suppose there’s a mendicant or priest who doesn’t base it on one tree but bases it on two or three trees. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Venerable Aniruddha, of those two liberations, this liberation is higher, greater, marvelous, and best.”
+Venerable True Kātyāyana replied, “Venerable Aniruddha, suppose there’s an ascetic or priest who doesn’t base it on one tree but bases it on two or three trees. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Venerable Aniruddha, of those two liberations, this liberation is higher, greater, marvelous, and best.”
 
 28\. Venerable Aniruddha also asked, “Good man, Kātyāyana, suppose they don’t base it on two or three trees but base it on one grove. Suppose they don’t base it on one grove but base it on two or three groves. Suppose they don’t base it on two or three groves but base it on one village. Suppose they don’t base it on one village but base it on two or three villages. Suppose they don’t base it on two or three villages but base it on one country. Suppose they don’t base it on one country but base it on two or three countries. Suppose they don’t base it on two or three countries but base it on the Earth up to the ocean. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Good man, Kātyāyana, which of these pairs of liberations are higher, greater, marvelous, and best?”
 {: #p28}
 
-29\. Venerable True Kātyāyana replied, “Venerable Aniruddha, suppose there is a mendicant or priest who doesn’t base it on two or three trees but bases it on one grove. Suppose they don’t base it on one grove but base it on two or three groves. Suppose they don’t base it on two or three groves but base it on one village. Suppose they don’t base it on one village but base it on two or three villages. Suppose they don’t base it on two or three villages but base it on one country. Suppose they don’t base it on one country but base it on two or three countries. Suppose they don’t base it on two or three countries but base it on the Earth up to the ocean. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Venerable Aniruddha, of those pairs of liberations, this liberation is higher, greater, marvelous, and best.”
+29\. Venerable True Kātyāyana replied, “Venerable Aniruddha, suppose there is an ascetic or priest who doesn’t base it on two or three trees but bases it on one grove. Suppose they don’t base it on one grove but base it on two or three groves. Suppose they don’t base it on two or three groves but base it on one village. Suppose they don’t base it on one village but base it on two or three villages. Suppose they don’t base it on two or three villages but base it on one country. Suppose they don’t base it on one country but base it on two or three countries. Suppose they don’t base it on two or three countries but base it on the Earth up to the ocean. Their thinking is freed, and they accomplish a perception of radiance. Their mind forms the perception of radiance, and it’s completely filled. Their mind is liberated to that extent and doesn’t go beyond it. Venerable Aniruddha, of those pairs of liberations, this liberation is higher, greater, marvelous, and best.”
 {: #p29}
 
 30\. Venerable Aniruddha told him, “Kātyāyana, these are the causes and conditions for knowing the relative superiority of those radiance gods that are born in the same place, whether they’re marvelous or not marvelous. What’s the reason for that? A person’s cultivation is fine or coarse because of the relative superiority of their mind. We find a person to be superior because their cultivation is fine or coarse. Good man, Kātyāyana, the Bhagavān also says this about the relative superiority of people.”
@@ -129,22 +129,22 @@ Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the rela
 32\. Venerable True Kātyāyana also asked, “Venerable Aniruddha, what are the causes and conditions for knowing the relative superiority of those pure radiance gods that are born in the same place, whether they’re marvelous or not marvelous?”
 {: #p32}
 
-33\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose there’s a mendicant or priest who stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This concentration of theirs isn’t cultivated, isn’t studied, isn’t broad, and isn’t fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they don’t attain the highest calm, highest peace, or the final end of their lives.
+33\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose there’s an ascetic or priest who stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This concentration of theirs isn’t cultivated, isn’t studied, isn’t broad, and isn’t fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they don’t attain the highest calm, highest peace, or the final end of their lives.
 {: #p33}
 
 34\. “Good man, Kātyāyana, it’s similar to the blue lotus and the crimson, red, and white lotuses, which are born of water and grow in water. While they’re at the bottom of a pond, their roots, stems, leaves, and flowers are all wet with clean water, moistened by that water, and no part of them isn’t wet.
 {: #p34}
 
-35\. “Good man, Kātyāyana, suppose there’s a mendicant or priest who stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This concentration of theirs isn’t cultivated, isn’t studied, isn’t broad, and isn’t fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they don’t attain the highest calm, highest peace, or the final end of their lives.
+35\. “Good man, Kātyāyana, suppose there’s an ascetic or priest who stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This concentration of theirs isn’t cultivated, isn’t studied, isn’t broad, and isn’t fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they don’t attain the highest calm, highest peace, or the final end of their lives.
 {: #p35}
 
-36\. “Good man, Kātyāyana, there’s another mendicant or priest whose thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This concentration of theirs is frequently cultivated, frequently studied, frequently broadened, and fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they attain the highest calm, highest peace, and the final end of their lives.
+36\. “Good man, Kātyāyana, there’s another ascetic or priest whose thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This concentration of theirs is frequently cultivated, frequently studied, frequently broadened, and fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they attain the highest calm, highest peace, and the final end of their lives.
 {: #p36}
 
 37\. “Good man, Kātyāyana, it’s similar to the blue lotus and the crimson, red, and white lotuses, which are born of water and grow in water. They emerge from the water and float on top where the water doesn’t wet them.
 {: #p37}
 
-38\. “Good man, Kātyāyana, so it is that another mendicant or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This concentration of theirs is frequently cultivated, frequently studied, frequently broadened, and fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they attain the highest calm, highest peace, and the final end of their lives.
+38\. “Good man, Kātyāyana, so it is that another ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pure radiance gods. This concentration of theirs is frequently cultivated, frequently studied, frequently broadened, and fully accomplished. Afterward, when their body breaks up and their life ends, they’re born among the pure radiance gods. After being born there, they attain the highest calm, highest peace, and the final end of their lives.
 {: #p38}
 
 39\. “Good man, Kātyāyana, these are the causes and conditions for knowing the relative superiority of those pure radiance gods that are born in the same place, whether they’re marvelous or not marvelous. What is the reason for that? A person’s cultivation is fine or coarse because of the relative superiority of their mind. We find a person to be superior because their cultivation is fine or coarse. Good man, Kātyāyana, the Bhagavān also says this about the relative superiority of people.”
@@ -158,16 +158,16 @@ Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the rela
 41\. Venerable True Kātyāyana also asked, “Venerable Aniruddha, what are the causes and conditions for knowing the relative superiority of those pervasively pure radiance gods who are born in one place, whether they’re marvelous or not marvelous?”
 {: #p41}
 
-42\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose a mendicant or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They don’t quite stop drowsiness and don’t skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light isn’t quite pure.
+42\. Venerable Aniruddha replied, “Good man, Kātyāyana, suppose an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They don’t quite stop drowsiness and don’t skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light isn’t quite pure.
 {: #p42}
 
-43\. “Good man, Kātyāyana, it’s like a burning lamp that’s conditioned by its oil and wick. If the oil has dirt or the wick isn’t pure, this causes the lamp’s light to become dim or unclear. Good man, Kātyāyana, so it is if a mendicant or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They don’t quite stop drowsiness and don’t skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light isn’t quite pure.
+43\. “Good man, Kātyāyana, it’s like a burning lamp that’s conditioned by its oil and wick. If the oil has dirt or the wick isn’t pure, this causes the lamp’s light to become dim or unclear. Good man, Kātyāyana, so it is if an ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They don’t quite stop drowsiness and don’t skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light isn’t quite pure.
 {: #p43}
 
-44\. “Good man, Kātyāyana, another mendicant or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They fully stop drowsiness and skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light is fully bright and pure.
+44\. “Good man, Kātyāyana, another ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They fully stop drowsiness and skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light is fully bright and pure.
 {: #p44}
 
-45\. “Good man, Kātyāyana, it’s like a burning lamp that’s conditioned by its oil and wick. If the oil has no dirt and the wick is also fully pure, this causes the lamp’s light to become fully bright and pure. Good man, Kātyāyana, so it is that another mendicant or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They fully stop drowsiness and skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light is fully bright and pure.
+45\. “Good man, Kātyāyana, it’s like a burning lamp that’s conditioned by its oil and wick. If the oil has no dirt and the wick is also fully pure, this causes the lamp’s light to become fully bright and pure. Good man, Kātyāyana, so it is that another ascetic or priest stays in an undisturbed place, whether it’s under a tree or an empty and peaceful dwelling. Their thinking is freed, and they accomplish the pervasiveness of the pervasively pure radiance gods. They fully stop drowsiness and skillfully calm restlessness and remorse. Afterward, when their body breaks up and their life ends, they are born among the pervasively pure radiance gods. After being born there, their light is fully bright and pure.
 {: #p45}
 
 46\. “Good man, Kātyāyana, these are the causes and conditions for knowing the relative superiority of those pervasively pure radiance gods who are born in the same place, whether they’re marvelous or not marvelous. What’s the reason for that? A person’s cultivation is fine or coarse because of the relative superiority of their mind. We find a person to be superior because their cultivation is fine or coarse. Good man, Kātyāyana, the Bhagavān also says this about the relative superiority of people.”
@@ -188,8 +188,9 @@ Venerable Aniruddha replied, “Good man, Kātyāyana, you can say that the rela
 {: #p50}
 
 ### Notes
-1. {: #n1} *Ṛṣidatta*. This name is translated to Chinese as “Sagely Other” or perhaps “Sagely Heretic.” The name also appears in MA 213, which is paralleled in Pāli (MN 89) as Isidatta. The character in both sources is depicted as someone involved in King Pasenadi’s government. Given that the Chinese typically translated rṣi as “Sage,” I’ve chosen the Sanskrit version of Isadatta, but the original may have had a different suffix than -datta. The Pāli parallel for this sūtra has instead a carpenter named Pañcakaṅga as the layperson who invited Anuruddha to a meal. [\[back\]](#ref1)
-2. {: #n2} *True Kātyāyana*. The Pāli parallel has this monk’s name as Abhiya Kaccāna, but the Chinese here seems to suggest Satya Kātyāyana. I’ve left it translated without a Sanskrit attestation. [\[back\]](#ref2)
+1. {: #n3} Parallels include [MN 127](https://suttacentral.net/mn127){: target="_blank"}. [\[Back\]](#ref3)
+2. {: #n1} *Ṛṣidatta*. This name is translated to Chinese as “Sagely Other” or perhaps “Sagely Heretic.” The name also appears in MA 213, which is paralleled in Pāli (MN 89) as Isidatta. The character in both sources is depicted as someone involved in King Pasenadi’s government. Given that the Chinese typically translated rṣi as “Sage,” I’ve chosen the Sanskrit version of Isadatta, but the original may have had a different suffix than -datta. The Pāli parallel for this sūtra has instead a carpenter named Pañcakaṅga as the layperson who invited Anuruddha to a meal. [\[back\]](#ref1)
+3. {: #n2} *True Kātyāyana*. The Pāli parallel has this monk’s name as Abhiya Kaccāna, but the Chinese here seems to suggest Satya Kātyāyana. I’ve left it translated without a Sanskrit attestation. [\[back\]](#ref2)
 
 ---
 
