Added translations of MA 9, 10, 82, and 186.

--- a/02_madhyama/01_First/01_Sevens/MA_007.md
+++ b/02_madhyama/01_First/01_Sevens/MA_007.md
@@ -4,7 +4,7 @@ title: 'The Medium Discourses | Chapter 1: Sevens | 7. Worldly Merit'
 type: kramdown
 base: ../../../
 previous: MA_006.html
-next: ../05_Related_To_Cultivation/index.html
+next: MA_009.html
 ---
 # [The Medium Discourses](../../index.html)
 ## [Chapter 1: Sevens](index.html)
