--- a/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_081.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/07_King_Dirghayu/MA_081.md
@@ -4,6 +4,7 @@ title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 81. Mindfulness of 
 type: kramdown
 base: ../../../
 previous: MA_080.html
+next: MA_082.html
 ---
 
 # [The Medium Discourses](../../index.html)
