Corrected various typos and a couple translation errors and inconsistencies.

--- a/02_madhyama/01_First/01_Sevens/MA_010.md
+++ b/02_madhyama/01_First/01_Sevens/MA_010.md
@@ -11,7 +11,7 @@ next: ../05_Related_To_Cultivation/index.html
 ## [Chapter 1: Sevens](index.html)
 ### 10. Ending the Contaminants
 
-1\. Thus I have heard: One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasāddharma].
+1\. Thus I have heard: One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasadharma].
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “It’s because of knowing and seeing that the contaminants can be ended, not by not knowing and not seeing. How can the contaminants be ended because of knowing and seeing?
@@ -37,7 +37,7 @@ next: ../05_Related_To_Cultivation/index.html
 8\. “Because someone doesn’t know the teaching as it truly is, they think things that shouldn’t be thought and don’t think things that should be thought. Because they think things that shouldn’t be thought and don’t think things that should be thought, contaminants of desire yet to arise will arise, and those that have already arisen will readily increase. Contaminants of existence and ignorance yet to arise will arise, and those that have already arisen will readily increase.
 {:#p8}
 
-9\. “Well-versed noble disciples hear the right teaching and meet true friends. They are tamed by the noble teaching and know the teaching as it truly is.
+9\. “Well-versed noble disciples hear the right teaching and meet true friends. They are disciplined by the noble teaching and know the teaching as it truly is.
 {:#p9}
 
 10\. “When someone doesn’t rightly consider, contaminants of desire yet to arise will arise, and those that have already arisen will readily increase. Contaminants of existence and ignorance yet to arise will arise, and those that have already arisen will readily increase.
@@ -68,7 +68,7 @@ next: ../05_Related_To_Cultivation/index.html
 17\. “This is called the downfall of views, being moved by views, and being tied by the bond of views. Because of them, ordinary fools then experience the pains of birth, old age, illness, and death.
 {:#p17}
 
-18\. “Well-versed noble disciples hear the right teaching and meet true friends. They are disciplined by the noble teaching and knows the teaching as it truly is. They know suffering as it truly is. They know suffering’s accumulation, know suffering’s cessation, and know the path to suffering’s as they truly are.
+18\. “Well-versed noble disciples hear the right teaching and meet true friends. They are disciplined by the noble teaching and know the teaching as it truly is. They know suffering as it truly is. They know suffering’s accumulation, know suffering’s cessation, and know the path to suffering’s cessation as they truly are.
 {:#p18}
 
 19\. “After thus knowing them as they truly are, the three fetters then are ended, which are belief in the individual, adherence to precepts, and doubt. After ending the three fetters, they attain stream entry. They won’t fall into bad states and are certainly headed for right awakening. They’ll experience at most seven existences. After seven rebirths up in heaven or among humans, they’ll readily attain the limit of suffering.
@@ -119,7 +119,7 @@ next: ../05_Related_To_Cultivation/index.html
 
 ##### 7. Considering
 
-31\. “How are the contaminants stopped by considering? Suppose a monk considers the first awakening factor of mindfulness, supported by seclusion, lack of desire, and complete cessation which lead to escape. He considers qualities, effort, joy, calm, concentration, and the seventh awakening factor of renunciation, supported by seclusion, lack of desire, and complete cessation which lead to escape. If someone doesn’t consider them, affliction and grief will arise. When they are considered, affliction and grief won’t arise. This is called stopping the contaminants by considering.
+31\. “How are the contaminants stopped by considering? Suppose a monk considers the first awakening factor of mindfulness, supported by seclusion, lack of desire, and complete cessation which lead to escape. He considers qualities, effort, joy, calm, concentration, and the seventh awakening factor of equanimity, supported by seclusion, lack of desire, and complete cessation which lead to escape. If someone doesn’t consider them, affliction and grief will arise. When they are considered, affliction and grief won’t arise. This is called stopping the contaminants by considering.
 {:#p31}
 
 32\. “Suppose a monk sets out to stop the contaminants by seeing, and they are stopped because of seeing … to stop the contaminants by guarding, and they are stopped because of guarding … to stop the contaminants by avoiding, and they are stopped because of avoiding … to stop the contaminants by using, and they are stopped because of using … to stop the contaminants by tolerating, and they are stopped because of tolerating … to stop the contaminants by removing, and they are stopped because of removing … to stop the contaminants by considering, and they are stopped because of considering. He’s called a monk who was once bound by all the contaminants and who’s now free. He can reach the limit of suffering with right knowledge.”
@@ -132,7 +132,7 @@ next: ../05_Related_To_Cultivation/index.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 30 June 2020
+Last Revised: 2 July 2020
 {: .revised}
 
 ---
