--- a/02_madhyama/01_First/01_Sevens/MA_009.md
+++ b/02_madhyama/01_First/01_Sevens/MA_009.md
@@ -14,9 +14,9 @@ next: MA_010.html
 1\. Thus I have heard: One time, the Buddha traveled to the city Rājagṛha and stayed at Veḷuvana Monastery.
 {:#p1}
 
-#### The Native Land Monks Praise Pūrṇa Maitrāyaniputra
+#### The Native Land Monks Praise Pūrṇa
 
-2\. He was [430a] accompanied by an assembly of great monks who had received their summer retreats together. Venerable Pūrṇa Maitrāyaniputra had also received his summer retreat in the [Buddha’s] native land.  
+2\. He was [430a] accompanied by an assembly of great monks who had spent their summer retreats together. Venerable Pūrṇa Maitrāyaniputra had also spent his summer retreat in the [Buddha’s] native land.  
 {:#p2}
 
 3\. It was then that some native land monks had finished their summer retreat after three months had passed. When they had finished mending robes, they gathered up their robes and bowls and left the native land headed for Rājagṛha. They took a circuitous route to Rājagṛha and stayed at Veḷuvana Monastery. Those native land monks then went to the Bhagavān, paid homage by prostrating themselves, and withdrew to sit at one side.
@@ -27,18 +27,18 @@ next: MA_010.html
 
 The native land monks replied, “Bhagavān, we’ve come from the native land. We spent the summer retreat in the native land.”
 
-5\. The Bhagavān asked them, “Among those monks of the native land, which monk is praised by the others as having few desires and being satisfied and who praises having few desires and being satisfied? Who himself lives quietly and praises quiet living? Who himself makes effort and praises making effort? Who himself is rightly mindful and praises right mindfulness? Who himself is single-minded and praises being single-minded? Who himself is wise and praises wisdom? Who himself has ended the contaminants and praises ending the contaminants? Who encourages, rouses, and makes [others] rejoice and praises encouraging, rousing, and making [others] rejoice?”
+5\. The Bhagavān asked them, “Among those monks of the native land, which monk is praised by the others as having few desires and being satisfied and who praises having few desires and being satisfied? Who himself lives quietly and praises quiet living? Who himself makes effort and praises making effort? Who himself is rightly mindful and praises right mindfulness? Who himself is single-minded and praises being single-minded? Who himself is wise and praises wisdom? Who himself has ended the contaminants and praises ending the contaminants? Who encourages, rouses, and makes others rejoice and praises encouraging, rousing, and making others rejoice?”
 {:#p5}
 
-The native land monks said, “Bhagavān, the Venerable Pūrṇa Maitrāyaniputra is the monk in that native land who is praised by the other monks as having few desires and being satisfied and who praises having few desires and being satisfied. He himself lives quietly and praises quiet living. He himself makes effort and praises making effort. He himself is rightly mindful and praises right mindfulness. He himself is single-minded and praises being single-minded. He himself is wise and praises wisdom. He himself has ended the contaminants and praises ending the contaminants. He encourages, rouses, and makes [others] rejoice and praises encouraging, rousing, and making [others] rejoice.”
+The native land monks said, “Bhagavān, the Venerable Pūrṇa Maitrāyaniputra is the monk in that native land who is praised by the other monks as having few desires and being satisfied and who praises having few desires and being satisfied. He himself lives quietly and praises quiet living. He himself makes effort and praises making effort. He himself is rightly mindful and praises right mindfulness. He himself is single-minded and praises being single-minded. He himself is wise and praises wisdom. He himself has ended the contaminants and praises ending the contaminants. He encourages, rouses, and makes others rejoice and praises encouraging, rousing, and making others rejoice.”
 
-6\. Just then, Venerable Śāriputra was sitting in the assembly, and he had this thought, “The Bhagavān asked this group of native land monks about this matter, and the native land monks gave their greatest praise to the good man Pūrṇa Maitrāyaniputra as having few desires and being satisfied and who praises having few desires and being satisfied. He himself lives quietly and praises quiet living. He himself makes effort and praises making effort. He himself is rightly mindful and praises right mindfulness. He himself is single-minded and praises being single-minded. He himself is wise and praises wisdom. He himself has ended the contaminants and praises ending the contaminants. He encourages, rouses, and makes [others] rejoice and praises encouraging, rousing, and making [others] rejoice.”
+6\. Just then, Venerable Śāriputra was sitting in the assembly, and he had this thought, “The Bhagavān asked this group of native land monks about this matter, and the native land monks gave their greatest praise to the good man Pūrṇa Maitrāyaniputra as having few desires and being satisfied and who praises having few desires and being satisfied. He himself lives quietly and praises quiet living. He himself makes effort and praises making effort. He himself is rightly mindful and praises right mindfulness. He himself is single-minded and praises being single-minded. He himself is wise and praises wisdom. He himself has ended the contaminants and praises ending the contaminants. He encourages, rouses, and makes others rejoice and praises encouraging, rousing, and making others rejoice.”
 {:#p6}
 
 7\. Venerable Śāriputra had another thought, “When will I be in the same congregation as the good man Pūrṇa Maitrāyaniputra? Maybe he’ll ask about a little doctrine, or he might agree to listen to my questions.”
 {:#p7}
 
-#### Śāriputra Questions Pūrṇa Maitrāyaniputra
+#### Śāriputra Meets Pūrṇa
 
 8\. It was then that the Bhagavān finished [430b] the summer retreat in Rājagṛha after three months had passed. After they had finished mending robes, he gathered his robe and bowl and left Rājagṛha headed for the country of Śrāvastī. He took a circuitous route to Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {:#p8}
@@ -130,16 +130,16 @@ He answered, “Good man, if the Bhagavān, the ascetic Gautama, asserted nirvā
 
 “The king said, ‘No.’
 
-30\. “Good man, being repeatedly question, what did the king of Kośala Prasenajit say? The king answered that group of ministers, ‘I was in Śrāvastī and had business in Śāketa. I thought, ‘What’s the easiest way to travel from Śrāvastī to Śāketa in a single day?’ Then I thought, ‘Now, for me to go from Śrāvastī to Śāketa, I would need to place seven chariots between them.’
+30\. “Good man, being repeatedly question, what did the king of Kośala Prasenajit say? The king answered that group of ministers, ‘I was in Śrāvastī and had business in Śāketa. I thought, ‘What’s the easiest way to travel from Śrāvastī to Śāketa in a single day?’ Then I thought, ‘Now, for me to go from Śrāvastī to Śāketa, I would need to place seven chariots between them.
 {:#p30}
 
-31\. “Thereupon, I had seven chariots placed between Śrāvastī and Śāketa. After the seven chariots were arranged, I left Śrāvastī and went to the first chariot. I rode the first chariot to the second chariot and dismounted from the first chariot. I rode the second chariot to the third chariot and dismounted [431b] from the second chariot. I rode the third chariot to the fourth chariot and dismounted from the third chariot. I rode the fourth chariot to the fifth chariot and dismounted from the fourth chariot. I rode the fifth chariot to the sixth chariot and dismounted from the fifth chariot. I rode the sixth chariot to the seventh chariot and dismounted from the sixth chariot.  I rode the seventh chariot and reached Śāketa in a single day.’
+31\. “‘Thereupon, I had seven chariots placed between Śrāvastī and Śāketa. After the seven chariots were arranged, I left Śrāvastī and went to the first chariot. I rode the first chariot to the second chariot and dismounted from the first chariot. I rode the second chariot to the third chariot and dismounted [431b] from the second chariot. I rode the third chariot to the fourth chariot and dismounted from the third chariot. I rode the fourth chariot to the fifth chariot and dismounted from the fourth chariot. I rode the fifth chariot to the sixth chariot and dismounted from the fifth chariot. I rode the sixth chariot to the seventh chariot and dismounted from the sixth chariot.  I rode the seventh chariot and reached Śāketa in a single day.’
 {:#p31}
 
 32\. “So it was, good man. The king of Kośala Prasenajit thus replied to that group of ministers’ questions. So it is, good man, that it’s because the precepts are pure that the purity of mind is attained … because the mind is pure that the purity of views is attained … because views are pure that the purity of the hindrance of doubt is attained … because of being pure of the hindrance of doubt that the purity of knowing and seeing what is and isn’t the path is attained … because knowing and seeing what is and isn’t the path is pure that the purity of knowing and seeing the path’s steps is attained … because knowing and seeing the path’s steps is pure that the purity of knowledge of the path’s steps to ending [suffering] is attained … because knowledge of the path’s steps to ending [suffering] is pure that the Bhagavān asserts nirvāṇa without remainder.”
 {:#p32}
 
-#### Śāriputra and Pūrṇa Maitrāyaniputra Praise Each Other
+#### Śāriputra and Pūrṇa Praise Each Other
 
 33\. Venerable Śāriputra then asked Venerable Pūrṇa Maitrāyaniputra, “Good man, what’s your name? What do religious practitioners call you, good man?”
 Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I am called Pūrṇa. My mother’s name was Maitrāyani, so religious practitioners call me Pūrṇa Maitrāyaniputra.”
@@ -157,7 +157,7 @@ Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I am called Pūrṇa.
 37\. Venerable Śāriputra answered, “Good man, I am named Upatiṣya. My mother’s name is Śārī, so religious practitioners call me Śāriputra.”
 {:#p37}
 
-38\. Venerable Pūrṇa Maitrāyaniputra praised him, “Now, I and a disciple of the Bhagavān have conversed, but I didn’t know him. I conversed with a second venerable, but I didn’t know him. I conversed with the Dharma general, but I didn’t know him. I conversed with a disciple who again turned the turning Dharma wheel, but I didn’t know. If I knew the Venerable Śāriputra, [431c] I wouldn’t have been able to answer a single line, much less give a discourse as profound as that.
+38\. Venerable Pūrṇa Maitrāyaniputra praised him, “Now, I and a disciple of the Bhagavān have conversed, but I didn’t know him. I conversed with a second venerable, but I didn’t know him. I conversed with the Dharma general, but I didn’t know him. I conversed with a disciple who again turned the turning Dharma wheel, but I didn’t know. If I knew the Venerable Śāriputra, [431c] I wouldn’t have been able to answer with a single line, much less give a discourse as profound as that.
 {:#p38}
 
 39\. “Good, good! Venerable Śāriputra is a disciple of the Tathāgata who has been made intelligent, insightful, and discerning by him. He’s peaceful, fearless, accomplished, and disciplined. He has gained great eloquence, attained the banner of immortality, and himself realized the accomplishment of the immortal element. As a result, the venerable asks the profoundest questions.
@@ -173,7 +173,7 @@ Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I am called Pūrṇa.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 30 June 2020
+Last Revised: 2 July 2020
 {: .revised}
 
 ---
