--- a/02_madhyama/04_Discernment/15_Pairs/MA_186.md
+++ b/02_madhyama/04_Discernment/15_Pairs/MA_186.md
@@ -11,19 +11,20 @@ next: ../../index.html
 ## Chapter 15: Pairs
 ### 186. Inquiry
 
-1\. Thus I have heard:  One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasādharma].
+1\. Thus I have heard:  One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasadharma].
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Someone who doesn’t know other minds as they truly are isn’t able to know the Bhagavān’s right and complete enlightenment. How should they inquire about the Tathāgata?”
-The monks then said to the Bhagavān, “The Bhagavān is the basis of the Dharma, the Bhagavān is the Dharma lord, and the Dharma comes from the Bhagavān. Please let him teach it. After listening, we’ll get a detailed knowledge of its meaning.”
 {:#p2}
+
+The monks then said to the Bhagavān, “The Bhagavān is the basis of the Dharma, the Bhagavān is the Dharma lord, and the Dharma comes from the Bhagavān. Please let him teach it. After listening, we’ll get a detailed knowledge of its meaning.”
 
 3\. The Buddha told them, “Listen closely, monks, listen closely! Well consider it. I’ll provide a discerning explanation for you.”
 {:#p3}
 
 The monks then accepted the teaching and listened.
 
-4\. The Bhagavān told them, “When someone doesn’t know other minds as they truly are, they should inquire about the Tathāgata in two ways: 1) the forms that they see with their eyes see and 2) the sounds that they hear with their ears. Does that venerable have defiled states that are perceived by the eye and ear, or are there none? Suppose when someone searches for defiled states that are perceived by the eye and ear, that venerable doesn’t have any. If none are present, then they search further.
+4\. The Bhagavān told them, “When someone doesn’t know other minds as they truly are, they should inquire about the Tathāgata in two ways: 1) the forms that they see with their eyes and 2) the sounds that they hear with their ears. Does that venerable have defiled states that are perceived by the eye and ear, or are there none? Suppose when someone searches for defiled states that are perceived by the eye and ear, that venerable doesn’t have any. If none are present, then they search further.
 {:#p4}
 
 5\. “Does that venerable have mixed states that are perceived by the eye and ear, or are there none? Suppose when someone searches for mixed states that are perceived by the eye and ear, that venerable doesn’t have any. If none are present, then they search further.
@@ -35,13 +36,13 @@ The monks then accepted the teaching and listened.
 7\. “Has that venerable engaged in these states for long, or has he engaged in them for [only] a short time? Suppose when someone searches, they find that that venerable has been engaged in these states for a long time and hasn’t engaged in them for [only] a short time. If he has been constantly engaged in them, then they search further.
 {:#p7}
 
-8\. “Has that venerable entered the meditations to become famous or to be rewarded, or has he entered the meditations not to become famous or to be rewarded? Suppose when someone searches, they find that that sage hasn’t entered the meditations because of misfortune. Suppose they were to say, ‘That venerable practices in comfort and not in fear. Parting with desire, he doesn’t pursue desire, and his desire have been ended.’
+8\. “Has that venerable entered the meditations to become famous or to be rewarded, or has he entered the meditations not to become famous or to be rewarded? Suppose when someone searches, they find that that venerable hasn’t entered the meditations because of misfortune. Suppose they were to say, ‘That venerable practices in comfort and not in fear. Parting with desire, he doesn’t pursue desire, and his desire have been ended.’
 {:#p8}
 
 9\. “He then should be asked, ‘Good man, what practice, power, and knowledge allow you to correctly observe that venerable and thus say that he practices in comfort and not in fear and that he has parted with desire, doesn’t pursue desire, and his desire has been ended?’
 {:#p9}
 
-10\. “He then might answer, ‘Good man, I don’t know his mind, nor do I know about other matters. Still, sometimes he dwells alone, lives with a community, or he’s present in a meeting. When the Sugata is there, the Sugata is teaching as the leader, or during meals, I have been able to watch that good man. I do not know it myself, but I’ve heard that venerable attest right in front of me, “I practice in comfort and not in fear. Parting with desire, I don’t pursue desire, and my desire has been ended.” Good man, this is my practice, power, and knowledge that allow me to correctly observe that venerable and thus say that he practices in comfort and not in fear and that he has parted with desire, doesn’t pursue desire, and his desire has been ended.’
+10\. “He then might answer, ‘Good man, I don’t know his mind, nor do I know about other matters. Still, sometimes he dwells alone, lives with a community, or he’s present in a meeting. When the Sugata is there, the Sugata is teaching as the leader or during meals, I have been able to watch that good man. I do not know it myself, but I’ve heard that venerable attest right in front of me, “I practice in comfort and not in fear. Parting with desire, I don’t pursue desire, and my desire has been ended.” Good man, this is my practice, power, and knowledge that allow me to correctly observe that venerable and thus say that he practices in comfort and not in fear and that he has parted with desire, doesn’t pursue desire, and his desire has been ended.’
 {:#p10}
 
 11\. “Thereupon, he again questions the state of that Tathāgata, ‘If there were defiled states that are perceived by the eye and ear dwelling in him, has he eliminated these states without remainder? If there were mixed states that are perceived by the eye and ear dwelling in him, has he eliminated these states without remainder? If there were clean states that are perceived by the eye and ear dwelling in him, has he eliminated these states without remainder?’
@@ -50,7 +51,7 @@ The monks then accepted the teaching and listened.
 12\. “The Tathāgata answers his questions, ‘If there were defiled states that are perceived by the eye and ear dwelling there, I have eliminated these states without remainder. If there were mixed states that are perceived by the eye and ear dwelling there, I have eliminated these states without remainder. The Tathāgata has stopped defiled states that are perceived by the eye and ear; he has pulled them out and cut them at the root, so they will never arise again. The Tathāgata has stopped mixed states that are perceived by the eye and ear; he has pulled them out and cut them at the root, so they will never arise again.
 {:#p12}
 
-13\. “‘If I have clean states, thus am I cleansed. Such is the domain, and such is the ascetic; I have thus accomplished this right teaching and discipline.’
+13\. “‘If I have clean states, thus was I cleansed. Such is the domain, and such is the ascetic; I have thus accomplished this right teaching and discipline.’
 {:#p13}
 
 14\. “It’s for the faithful disciple who goes to see the Tathāgata, serves the Tathāgata, and hears Dharma from the Tathāgata that the Tathāgata teaches the Dharma. It goes higher and higher, becomes more and more sublime, and well destroys the dark and light. When the Tathāgata teaches the Dharma for someone, it goes higher and higher, becomes more and more sublime, and well destroys the dark and light. They will know conclusively of this one Dharma after thus hearing it that they’ve attained the ultimate of teachings. Theirs will be a clear faith in the Bhagavān: ‘That Bhagavān is rightly and completely enlightened.’
